force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <description>A benefits Policy</description>
    <label>Policy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>