force-app/main/default/objects/Policy__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Long Term Disability</fullName>
            </value>
            <value>
                <fullName>Short Term Disability</fullName>
            </value>
            <value>
                <fullName>Flexible Spending Account - Medical</fullName>
            </value>
            <value>
                <fullName>Flexible Spending Account - Dependent Care</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
                <isActive>false</isActive>
                <label>Disability</label>
            </value>
            <value>
                <fullName>Life / Disability</fullName>
                <isActive>false</isActive>
                <label>Life / Disability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>