force-app/main/default/objects/Policy__c/fields/Contribution_for_EEs__c.field-meta.xml
<CustomField>
    <fullName>Contribution_for_EEs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contribution for EEs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>