force-app/main/default/objects/Policy__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Expiration Date</label>
    <type>Date</type>
</CustomField>