force-app/main/default/objects/Policy__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>