force-app/main/default/objects/Policy__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>