force-app/main/default/objects/Policy__c/fields/Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>