force-app/main/default/objects/Policy__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Policies must be related to an benefits opportunity. Please select an eligible benefits opportunity.</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Benefits New Plan, Benefits Renewal, Benefits Change, Benefits BoR</value>
        </filterItems>
        <infoMessage>Displaying benefits opportunities only.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>