force-app/main/default/objects/Policy__c/fields/Policy_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Policy_Unique_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>