force-app/main/default/objects/Policy__c/fields/Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period__c</fullName>
    <label>Waiting Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Waiting_Periods</valueSetName>
    </valueSet>
</CustomField>